# cmdra

./: .gitignore  LICENSE  README.md  go.mod  go.sum
.github/workflows/: ci.yml  docs-pages.yml  release.yml
certs/: ca.key  client-a.crt  client-b.key
cmd/cmdagentui/: main.go
cmd/cmdractl/: main.go  main_test.go
cmd/cmdrad/: config.go  main.go  run.go  service.go  service_test.go  windows_service_stub.go  windows_service_windows.go
cmd/cmdraui/: main.go
dev/: README.md  cmdagentd.json
dev/certs/: ca.crt  client-a.key  client-b.crt  server.crt  server.key
docs/: pty-attach-checklist.md
examples/go_sdk/: README.md
python/: README.md  pyproject.toml
python/cmdagent_client/: __init__.py  ansible.py  client.py
python/cmdagent_client/ansible_plugins/: __init__.py
python/cmdagent_client/ansible_plugins/connection/: cmdagent.py
python/examples/: robot_ci.robot  robot_smoke.robot
python/examples/ansible/: README.md  inventory.ini
python/tests/: README.md  conftest.py  test_ansible_connection_plugin.py  test_execution_api.py  test_file_api.py  test_performance_checks.py  test_robot_library.py
scripts/: build-python-package.sh  build-release.sh  ci-docs.sh  ci-go.sh  ci-python.sh  ci-verify-generated.sh  ci-verify-version.sh  gen-proto.sh  generate-dev-certs.sh  pty-smoke-windows-cmdagentui.ps1  pty-smoke-windows-cmdraui.ps1  pty-smoke-windows.ps1  service-smoke-linux.sh  service-smoke-macos.sh  service-smoke-windows.ps1
sdk/: README.md
sdk/go/: README.md
website/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
(+107 files in other folders)
