[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmdagent-client"
version = "0.1.0"
description = "Python SDK for cmdagentd"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "grpcio>=1.78.0",
  "protobuf>=6.31.1",
]

[project.optional-dependencies]
ansible = ["ansible-core>=2.17"]
robot = ["robotframework>=7.0"]
dev = [
  "pytest>=8.0",
  "grpcio-tools>=1.78.0",
  "build>=1.4.0",
  "wheel>=0.45.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cmdagent_client*"]
